@@ -1,3 +1,8 @@
+2002-02-16  Andrew Cagney  <ac131313@redhat.com>
+
+	* gdbarch.sh (TARGET_LONG_DOUBLE_BIT): Default to 64.
+	* gdbarch.h, gdbarch.c: Re-generate.
+
 2002-02-16  Daniel Jacobowitz  <drow@mvista.com>
 
 	* valarith.c (value_x_unop): Fix decrement; support post-decrement.
